# emmm

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.json  CONTRIBUTING.md  README.md  design.txt  emmm.code-workspace  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.json  tsconfig.json
apps/editor/: README.md  package.json  svelte.config.js  tsconfig.json  vite.config.js
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/capabilities/: default.json
apps/editor/src-tauri/icons/: icon.icns
apps/editor/src-tauri/src/: archive.rs  compress.rs  font_registry.rs  lib.rs  render.rs
dom-css-inliner/: package-lock.json  package.json  tsconfig.json
dom-css-inliner/src/: inliner.ts  specificity.ts
dom-css-inliner/tests/: specificity.test.ts
editor/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
editor/src/: styles.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
libemmm/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
libemmm/src/: debug-print.ts  (+13 more)
minimal-jsx-runtime/: jsx-runtime.d.ts  jsx-runtime.ts  package-lock.json  package.json  tsconfig.json
src/: app.html  debug.ts  default.ts  front.ts  index.ts  interface.ts  messages.ts  parser.ts  temp.ts  typing-helper.ts  util.ts
src-tauri/: Cargo.toml
tests/: advanced_syntax.test.ts  basic_syntax.test.ts  block_macros.test.ts  define_block.test.ts  define_inline.test.ts  macros.test.ts  parser.test.ts
tools/: inspect-clipboard.html
(+192 files in other folders)
