[package]
name = "kfgui"
version = "0.1.3"
description = "GUI frontend for the emmm markup language"
authors = ["The Dissidents"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kfgui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
# tauri-plugin-clipboard-manager = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
image = "0.25.5"
tauri-plugin-clipboard-manager = "2.2.3"
num-traits = "0.2.19"
log = "0.4.28"
tauri-plugin-log = "2.7.0"
time = "0.3.44"
tauri-plugin-dialog = "2"
fast_image_resize = { version = "5.1.4", features = ["image"] }
tokio = "1.47.1"
zip = "7.2.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
fancy-regex = "0.17.0"

